syntax = "proto3";
package proto;

option go_package = "github.com/anyuan-chen/record/proto/pkg/core_pb";

message Number {
    int64 number = 1;
}
message Token {
    bytes token = 1;
}
message NumberWithToken {
    Number number = 1;
    Token token = 2;
}
message JSONResponse {
    bytes data = 1;
}
message Empty {

}
message FloatScore {
    double score = 1;
}
service CoreManager {
    rpc GetTopArtists(NumberWithToken) returns (JSONResponse){}
	rpc GetTopSongs(NumberWithToken) returns (JSONResponse){}
	rpc GetTopGenres(Token) returns (JSONResponse){}

    rpc GetRecommendedSongs(NumberWithToken) returns (JSONResponse){}
    rpc MakeRecommendedPlaylist(Token) returns(Empty){}
    rpc GetPopularityScore(Token) returns (FloatScore){}
}

// protoc -I=. --go_out=./pkg/core_pb --go_opt=paths=source_relative \
// --go-grpc_out=./pkg/core_pb --go-grpc_opt=paths=source_relative \
// core.proto 